# airgradient_go

./: .gitignore  BUILD.md  CMakeLists.txt  README.md  reference-ui.cpp  sdkconfig  sdkconfig.defaults  sdkconfig.old
.config/: .clang-format  partitions.csv
.docs/: AGENT.md  AI_GUIDELINES_TH.md  CODE_REVIEW.md  COPILOT_INSTRUCTIONS.md  FLASH_OPTIMIZATION.md  INDEX.md  QUICKSTART.md  REQUIMENT.md  START_HERE.md
.docs/ARCHITECTURE/: DRIVER_CONTRACTS.md  FIRMWARE_PLAN.md  HARDWARE_MAP.md  LP5036.md  POWER_STATES.md
.docs/REFERENCES/: GPS_ANTENNA_CONFIG.md
.docs/REFERENCES/docs/: README.md
.docs/REFERENCES/docs/datasheet_md/: .gitkeep  CAP1203-1-AC3-TR.md  DPS368.md  LIS2DH12.md  NTC.md  STCC4.md  Sensirion_PM_Sensor_Datasheet.md  W25N512GV.md  bq25629.md  infineon-dps368-datasheet-en.md
components/bq25629/: CMakeLists.txt  README.md
components/bq25629/include/: bq25629.h
components/bq25629/src/: bq25629.cpp
components/cap1203/: CMakeLists.txt  README.md
components/cap1203/include/: cap1203.h
components/cap1203/src/: cap1203.cpp
components/dps368/: CMakeLists.txt
components/dps368/include/: dps368.h
components/dps368/src/: dps368.c
components/esp_sgp4x/: CMakeLists.txt
components/esp_sgp4x/include/: type_utils.h
components/lis2dh12/: CMakeLists.txt
components/lis2dh12/include/: lis2dh12.h
components/lis2dh12/src/: lis2dh12.cpp
components/lp5036/: CMakeLists.txt  README.md
components/lp5036/example/: led_patterns.cpp  lp5036_example.cpp
components/lp5036/include/: color_utils.h  led_effects.h  lp5036.h
components/lp5036/src/: lp5036.cpp
components/spiffs_nand/: CMakeLists.txt
components/sps30/: CMakeLists.txt  README.md
components/sps30/include/: sps30.h
components/sps30/src/: sps30.c
components/stcc4/: CMakeLists.txt  README.md  idf_component.yml
components/stcc4/example/: README.md  stcc4_example.cpp
components/stcc4/include/: stcc4.h
components/stcc4/src/: stcc4.cpp
main/: CMakeLists.txt  DISPLAY_EXAMPLE_README.md  airgradient-g.cpp  airgradient-go.cpp  display_example.cpp  gps.cpp  gps.h  i2c_scanner.cpp  i2c_scanner.h  idf_component.yml  log_storage.cpp  log_storage.h  lv_conf.h  sensor.cpp  sensor.h  ui_display.cpp  ui_display.h
